CTT_Package/objects/ACN_Screen_Data_Elements__c.object
<CustomObject>
    <fields>
        <fullName>ACN_Default_Answer__c</fullName>
        <description>Default answer to a question, which will be checked by Default when the question is rendered.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Default_Question__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify this question is to be loaded on default screen load.</description>
        <label>Default Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACN_Display_Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACN_External_Ref__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Ref.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_Input_Questions__c</fullName>
        <description>Question Numbers to pass as input to compound screen</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question/Component Input</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Options_Layout__c</fullName>
        <label>Options Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one-column</fullName>
                    <default>true</default>
                    <label>1-Column</label>
                </value>
                <value>
                    <fullName>two-column</fullName>
                    <label>2-Column</label>
                </value>
                <value>
                    <fullName>three-column</fullName>
                    <label>3-Column</label>
                </value>
                <value>
                    <fullName>side-by-side</fullName>
                    <label>Side By Side</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACN_Question_Identifier__c</fullName>
        <displayFormat>QI-{000000}</displayFormat>
        <label>Question Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ACN_Question_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Logic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question/Component</label>
        <referenceTo>ACN_Question_Repository__c</referenceTo>
        <relationshipLabel>Screen Data Elements</relationshipLabel>
        <relationshipName>Question_Data_Entry_Data_Retrieval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACN_Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Screen</label>
        <referenceTo>ACN_Call_Flow_Screen__c</referenceTo>
        <relationshipLabel>Screen Data Elements</relationshipLabel>
        <relationshipName>ACN_Screen_Data_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACN_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Section</label>
        <type>TextArea</type>
    </fields>
    <label>Screen Data Elements</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ACN_Question_Identifier__c</columns>
        <columns>ACN_Default_Question__c</columns>
        <columns>ACN_Question_Logic__c</columns>
        <columns>ACN_Display_Order__c</columns>
        <columns>ACN_Question__c</columns>
        <columns>ACN_Screen__c</columns>
        <columns>Section__c</columns>
        <columns>ACN_Type__c</columns>
        <columns>ACN_Field_Name__c</columns>
        <columns>ACN_Display_Condition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACN_Screen__c</field>
            <operation>equals</operation>
            <value>Screen 1</value>
        </filters>
        <filters>
            <field>ACN_Screen__c</field>
            <operation>equals</operation>
            <value>Screen 2</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{000000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screen Data Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>